// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUI Row and Column/> renders column with automation id when qaHook prop is passed in  1`] = `
<div
  className="xui-column-12-of-12"
  data-automationid="qaHook"
/>
`;

exports[`<XUI Row and Column/> renders row with automation id when qaHook prop is passed in 1`] = `
<div
  className="xui-row-flex"
  data-automationid="qaHook"
/>
`;

exports[`<XUI Row and Column/> renders the base column with no extra settings passed 1`] = `
<div
  className="xui-column-12-of-12"
>
  Testing 💩
</div>
`;

exports[`<XUI Row and Column/> renders the base row with no extra settings passed 1`] = `
<div
  className="xui-row-flex"
>
  Testing 💩
</div>
`;

exports[`<XUI Row and Column/> renders the column with breakpoint-dependent column widths, if provided 1`] = `
<div
  className="xui-column-12-of-12 xui-column-3-of-12-small-up xui-column-6-of-12-large-up"
>
  Testing 💩
</div>
`;
